onboarding/stylesheets/css/main.css
 @font-face { font-family: Avenir; src: url('/Avenir-Bold.ttf'); } 

body {
    
    font-family: "Avenir" !important;
    color: #2B303D;
}


.flex-container-center {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    margin: 15px;
}

.dg-column-start {
    padding-top:50px;
}


.dg-progress-bar {
    display: flex;
    justify-content: space-evenly; 
    padding-top:50px; 
    border-bottom: solid 3px #296EFB;
}

.dg-progress-bar-item {
    margin-left:20px; 
    margin-right: 20px;
}

.dg-progress-bar-item-login {
    margin-left:20px; 
    margin-right: 10px;
}

.dg-onboard h1 {
    padding-bottom: 40px;
}

.dg-onboard p {
    font-size: 1.5rem;
    padding-bottom: 40px;
}


@media all and (max-width: 760px) and (min-width: 300px) {
    .placeholder {
        width: 50%;

    }
}

